--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ai-sdk/openai": "latest",
-    "@ai-sdk/react": "latest",
+    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/react": "^2.0.4",
+    "@ai-sdk/xai": "^2.0.2",
     "@hookform/resolvers": "^3.9.1",
+    "@mastra/core": "^0.13.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -39,7 +41,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "ai": "latest",
+    "ai": "^5.0.4",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
