Add description field to package.json for Interview Assistant
- Added a description field to package.json to provide a brief overview of the project.
- This change enhances project metadata and improves clarity for users and developers.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "interview-assistant",
+  "description": "Interview Assistant is a tool that helps you prepare for your interviews.",
   "version": "0.1.0",
   "private": true,
   "scripts": {
